[package]
authors = ["Aaro Luomanen"]
default-run = "arctis-battery-indicator-debug"
description = "Program that displays a battery icon for the SteelSeries Arctis headset."
edition = "2024"
homepage = "https://github.com/aarol/"
license = "MIT"
name = "arctis-battery-indicator"
version = "2.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arctis-battery-indicator-debug"
path = "src/bin/debug.rs"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
hidapi = "2.6.3"
log = "0.4.22"
serde = "1.0.219"
simplelog = { version = "0.12.2", features = ["paris"] }
sys-locale = "0.3.2"
toml = "0.8.21"
tray-icon = "0.20.1"
winit = "0.30.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
gtk = "0.18.2"
image = { version = "0.25.6", default-features = false, features = ["ico"] }
include_dir = "0.7.4"

[build-dependencies]

[profile.release]
lto = true
opt-level = "z"
